# CadToSeq

./: .gitignore  README.md  config.yaml  pyproject.toml
config/: config.yaml  paper_split.json
data/fabricad_examples/00000900/: plan.csv
data/fabricad_examples/00001324/: plan.csv
data/fabricad_examples/00001669/: plan.csv
data/fabricad_examples/00001752/: plan.csv
data/fabricad_examples/00002081/: plan.csv
data/fabricad_examples/00003561/: plan.csv
data/fabricad_examples/00005718/: plan.csv
data/fabricad_examples/00008109/: plan.csv
data/fabricad_examples/00009128/: plan.csv
data/fabricad_examples/00009531/: plan.csv
data/fabricad_examples/00009617/: plan.csv
data/fabricad_examples/00010878/: plan.csv
data/fabricad_examples/00011000/: plan.csv
data/fabricad_examples/00011365/: plan.csv
data/fabricad_examples/00011510/: plan.csv
data/fabricad_examples/00012253/: plan.csv
data/fabricad_examples/00012362/: plan.csv
data/fabricad_examples/00013162/: plan.csv
data/fabricad_examples/00014423/: plan.csv
data/fabricad_examples/00015166/: plan.csv
data/fabricad_examples/00015695/: plan.csv
data/fabricad_examples/00017368/: plan.csv
data/fabricad_examples/00017801/: plan.csv
data/fabricad_examples/00018498/: plan.csv
data/fabricad_examples/00020820/: plan.csv
data/fabricad_examples/00021300/: plan.csv
data/fabricad_examples/00022229/: plan.csv
data/fabricad_examples/00024861/: plan.csv
data/fabricad_examples/00026436/: plan.csv
scripts/: create_test_data.py  create_vecsets.py  infer.py  train.py
src/mpp/: constants.py
(+182 files in other folders)
